// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CheckboxButtonGroup sets initial value properly 1`] = `
<div
  className="CheckboxButtonGroup CheckboxButtonGroup--row CheckboxButtonGroup--row--compact"
  id="checkbox-question"
>
  <input
    bordered={true}
    checked={true}
    id="first"
    label="First value"
    onChange={[Function]}
    type="checkbox"
    value={1}
  />
  <input
    bordered={true}
    checked={true}
    id="second"
    label="Second value"
    onChange={[Function]}
    type="checkbox"
    value={2}
  />
</div>
`;

exports[`CheckboxButtonGroup will update array state to check a new item 1`] = `
<div
  className="CheckboxButtonGroup CheckboxButtonGroup--row CheckboxButtonGroup--row--compact"
  id="checkbox-question"
>
  <input
    bordered={true}
    checked={true}
    id="first"
    label="First value"
    onChange={[Function]}
    type="checkbox"
    value={1}
  />
  <input
    bordered={true}
    checked={false}
    id="second"
    label="Second value"
    onChange={[Function]}
    type="checkbox"
    value={2}
  />
</div>
`;

exports[`CheckboxButtonGroup will update array state to uncheck an item 1`] = `
<div
  className="CheckboxButtonGroup CheckboxButtonGroup--row CheckboxButtonGroup--row--compact"
  id="checkbox-question"
>
  <input
    bordered={true}
    checked={false}
    id="first"
    label="First value"
    onChange={[Function]}
    type="checkbox"
    value={1}
  />
  <input
    bordered={true}
    checked={false}
    id="second"
    label="Second value"
    onChange={[Function]}
    type="checkbox"
    value={2}
  />
</div>
`;
